update readme docs links and status

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,12 @@
 = Datahike SQLite Backend
 
+____
+SQLite storage backend for Datahike, the open datalog database.
+____
+
+image:https://img.shields.io/badge/doc-outskirtslabs-orange.svg[doc,link=http://docs.outskirtslabs.com/datahike-sqlite/next/]
+image:https://img.shields.io/badge/status-experimental-red.svg[status: experimental,link=http://docs.outskirtslabs.com/open-source-vital-signs#experimental]
+
 This library provides a backend for
 https://github.com/replikativ/datahike[Datahike] using
 https://www.sqlite.org[SQLite] as the backing store, with direct native
@@ -10,6 +17,8 @@ ____
 ++[++!WARNING++]++ This project is highly experimental and not
 production ready.
 ____
+
+Project status: *https://docs.outskirtslabs.com/open-source-vital-signs#experimental[Experimental]*.
 
 == Why sqlite4clj?
 
@@ -43,7 +52,7 @@ Include the library in your deps.edn:
                            :git/sha "c94e449be351b13c7b279d39ee3266cc22dd8f7d"}
 ----
 
-==== Dependencies
+=== Dependencies
 
 * The https://clojars.org/io.replikativ/datahike[io.replikativ/datahike
 dependency] must be provided by your project and this backend is
@@ -59,7 +68,7 @@ deps.edn alias.
 this argument by adding the manifest attribute
 `Enable-Native-Access: ALL-UNNAMED` to your jar.
 
-==== Example
+=== Example
 
 [source,clojure]
 ----
@@ -101,6 +110,12 @@ this argument by adding the manifest attribute
 (d/release conn)
 ----
 
+== Documentation
+
+* https://docs.outskirtslabs.com/datahike-sqlite/next/[Docs]
+* https://docs.outskirtslabs.com/datahike-sqlite/next/api[API Reference]
+* https://github.com/outskirtslabs/datahike-sqlite/issues[Support via GitHub Issues]
+
 == Configuration
 
 The value for `:store` is a configuration map. To invoke datahike-sqlite
@@ -114,21 +129,21 @@ https://github.com/andersmurphy/sqlite4clj[`sqlite4clj.core/init-db!`].
 
 == Development
 
-==== Testing
+=== Testing
 
 [source,bash]
 ----
 bb test
 ----
 
-==== Formatting
+=== Formatting
 
 [source,shell]
 ----
 bb fmt
 ----
 
-==== Linting
+=== Linting
 
 [source,shell]
 ----
